# modeling

./: .gitignore  readme.md
lab_01/: readme.md
lab_01/report/: 00-preamble.tex  01-title.tex  11-report.tex
lab_01/src/: main  main.hs
lab_02/src/: CMakeLists.txt  readme.md
lab_02/src/gui/: mainwindow.ui
lab_02/src/include/: Exception.h  Interpolation.h  Mathematics.h  mainwindow.h
lab_02/src/source/: Exception.cc  GraphicsBuilder.cc  Interpolation.cc  Mathematics.cc  mainwindow.cc
lab_03/report/: 11-report.tex  report.tex
lab_03/src/: CMakeLists.txt  compile_commands.json  readme.md
lab_03/src/gui/: mainwindow.ui
lab_03/src/include/: GraphicsBuilder.h  Mathematics.h
lab_03/src/source/: GraphicsBuilder.cc  Mathematics.cc  mainwindow.cc
lab_04/report/: 01-title.tex  11-report.tex
lab_04/src/: CMakeLists.txt  compile_commands.json
lab_04/src/gui/: mainwindow.ui
lab_04/src/include/: GraphicsBuilder.h  Mathematics.h
lab_04/src/source/: GraphicsBuilder.cc  Mathematics.cc  mainwindow.cc
lab_05/report/: 00-preamble.tex  11-report.tex
lab_05/src/: CMakeLists.txt  readme.md
lab_05/src/gui/: mainwindow.ui
lab_05/src/include/: Mathematics.h
lab_05/src/source/: Mathematics.cc  mainwindow.cc
sem_01/lab_01/report/: 00-preamble.tex
sem_01/lab_01/src/: main.hs  readme.md
sem_01/lab_02/report/: 00-preamble.tex  01-title.tex  11-report.tex  main.tex
sem_01/lab_02/src/: readme.md
sem_01/lab_02/src/include/: GraphicsBuilder.h  Mathematics.h
sem_01/lab_02/src/source/: GraphicsBuilder.cc  Mathematics.cc
sem_01/lab_03/report/: 00-preamble.tex  01-title.tex
sem_01/lab_03/src/: readme.md
sem_01/lab_03/src/include/: Mathematics.h  mainwindow.h
sem_01/lab_03/src/source/: Mathematics.cc
sem_01/lab_04/src/: readme.md
sem_01/lab_05/report/: 01-title.tex  11-report.tex
sem_02/lab_01/randomise/: even_table.csv  table.py
sem_02/lab_01/report/: content.tex  main.tex
sem_02/lab_01/src/: criterion.py  main.py  odd_table.csv  program_method.py  table_method.py
sem_02/lab_02/: lab2.ipynb
sem_02/lab_02/.ipynb_checkpoints/: lab_02-checkpoint.ipynb
sem_02/lab_02/report/: main.tex
sem_02/lab_03/src/: main.py  requiments.txt
sem_02/lab_04/report/: main.tex
sem_02/lab_04/src/: main.py  requirements.txt
sem_02/lab_05/src/: main.py
sem_02/lab_06/src/: main.py  requirements.txt
sem_02/lab_07/src/: lab_07.gps
sem_02/lab_08/src/: lab_08.gps
(+40 files in other folders)
